Search input text cut off issue

--- a/scss/components/_input.scss
+++ b/scss/components/_input.scss
@@ -21,6 +21,11 @@
     padding: 10px 20px 10px 48px;
     color: $grey-3;
 
+    &--min-width {
+      min-width: 300px;
+      padding: 10px 15px 10px 48px;
+    }
+
     &-text {
       width: 80px;
       height: 53px;
@@ -998,7 +1003,7 @@
       min-width: 250px;
 
       &-alt {
-        height: 60px;
+        height: 40px;
       }
 
       .custom-input {
